--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <title>Instagram Bio Disclaimer</title>
 </head>
 <body>
+    <h1 style="text-align: center;">COPYRIGHT DETAILS</h1>
     <div>
-        <p>The mention "POST9000000, All rights reserved." on POST9000000 Instagram bio concerns every photography/pictures/illustration except for some un/cropped photography/pictures/illustration. IF YOU NOTICE YOUR PHOTOGRAPHY/PICTURES/ILLUSTRATION AND WANT CREDITS, CONTACT ME IMMEDIATELY BY PRIVATE MESSAGE ON INSTAGRAM.</p>
+        <p style="text-align: center;">The mention "POST9000000, All rights reserved." on POST9000000 Instagram bio concerns every photography/pictures/illustration except for some un/cropped photography/pictures/illustration. IF YOU NOTICE YOUR PHOTOGRAPHY/PICTURES/ILLUSTRATION AND WANT CREDITS, CONTACT ME IMMEDIATELY BY PRIVATE MESSAGE ON INSTAGRAM.</p>
     </div>
 </body>
 </html>
